--- a/reverse_inference_article/Reverse Inference.htm
+++ b/reverse_inference_article/Reverse Inference.htm
@@ -9,45 +9,24 @@
 
 <h2><p >'Reverse Inference' in deep neural&nbsp;networks</p></h2>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Trying to google the term Reverse
+<p>Trying to google the term Reverse
 Inference usually points you to neuropsychology articles. The articles usually
-refer to methods that try to identify ones mental state from the observed
+refer to methods that try to identify one's mental state from the observed
 brain activity. The methods mostly involve MRI of human brain that is used for
-more or less successful interpretation of patients ongoing cognitive process<o:p></o:p></span></p>
+more or less successful interpretation of patient's ongoing cognitive process</p>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>( <a
-href="https://www.sciencedirect.com/science/article/pii/S1053811913000141"
-target="_blank">https://www.sciencedirect.com/science/article/pii/S1053811913000141</a>)<o:p></o:p></span></p>
+<p><a href="https://www.sciencedirect.com/science/article/pii/S1053811913000141">https://www.sciencedirect.com/science/article/pii/S1053811913000141</a></p>
 
-<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
+<p>I have borrowed the fancy term for
+much simpler, while similar, problem.</p>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>I have borrowed the fancy term for
-much simpler, while similar, problem.<o:p></o:p></span></p>
+<p>Neuroscientists ask: I know very
+little about my patient's brain, but how do I know what he/she feels or sees
+when the brain's MRI looks like this?</p>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Neuroscientists ask: I know very
-little about my patients brain, but how do I know what he/she feels or sees
-when the brains MRI looks like this?<o:p></o:p></span></p>
-
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>My simple question is: Im given a
-trained DNN, what the net sees on its input while I get this particular output?</span></b><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
-"Times New Roman"'><o:p></o:p></span></p>
+<p> My simple question is: I'm given a
+trained DNN, what the net sees on its input while I get this particular output?
+ </p>
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
