--- a/reverse_inference_article/Reverse Inference.htm
+++ b/reverse_inference_article/Reverse Inference.htm
@@ -46,8 +46,7 @@ on the MNIST dataset to crate discriminator model:</p>
 
 <p>First, we prepare the environment and the training data:</p>
 
-<p>
- <img src="image002.jpg"</p>
+<p> <img src="image002.jpg"></p>
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
