--- a/reverse_inference_article/Reverse Inference.htm
+++ b/reverse_inference_article/Reverse Inference.htm
@@ -48,39 +48,14 @@ on the MNIST dataset to crate discriminator model:</p>
 
 <p> <img src="image002.jpg"></p>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>The model for detector
-(discriminator) is defined as CNN and trained on the MNIST dataset:<o:p></o:p></span></p>
+<p>The model for detector (discriminator) is defined as CNN and trained on the MNIST dataset:</p>
 
-<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman";mso-no-proof:yes'><!--[if gte vml 1]><v:shape
- id="Picture_x0020_8" o:spid="_x0000_i1032" type="#_x0000_t75" alt="https://cdn-images-1.medium.com/max/1000/1*6V3eObKJ6iJdDOCJJSen2g.png"
- style='width:511.8pt;height:268.8pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="Reverse%20Inference_files/image003.png" o:title="1*6V3eObKJ6iJdDOCJJSen2g"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=682 height=358
-src="Reverse%20Inference_files/image004.jpg"
-alt="https://cdn-images-1.medium.com/max/1000/1*6V3eObKJ6iJdDOCJJSen2g.png"
-v:shapes="Picture_x0020_8"><![endif]></span><span style='font-size:12.0pt;
-font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
+<p><img src="image004.jpg"></p>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Lets check if the trained model
-recognizes a custom uploaded image:<o:p></o:p></span></p>
+<p>Let's check if the trained model
+recognizes a custom uploaded image:</p>
 
-<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman";mso-no-proof:yes'><!--[if gte vml 1]><v:shape
- id="Picture_x0020_7" o:spid="_x0000_i1031" type="#_x0000_t75" alt="https://cdn-images-1.medium.com/max/1000/1*umgXqwbSroyvRBt1lmAdDA.png"
- style='width:487.2pt;height:396pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="Reverse%20Inference_files/image005.png" o:title="1*umgXqwbSroyvRBt1lmAdDA"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=650 height=528
-src="Reverse%20Inference_files/image006.jpg"
-alt="https://cdn-images-1.medium.com/max/1000/1*umgXqwbSroyvRBt1lmAdDA.png"
-v:shapes="Picture_x0020_7"><![endif]></span><span style='font-size:12.0pt;
-font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
+<p><img src="image006.jpg"></p>
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
